Test AdRepository