@@ -1,17 +1,21 @@
 package vnavesnoj.ads_loader_service.repository;
 
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.r2dbc.core.DatabaseClient;
 import reactor.test.StepVerifier;
 import vnavesnoj.ads_loader_common.database.entity.Ad;
 import vnavesnoj.ads_loader_common.database.entity.Platform;
 import vnavesnoj.ads_loader_service.database.repository.AdRepository;
 import vnavesnoj.ads_loader_service.integration.annotation.R2dbcTest;
 
+import java.nio.charset.Charset;
 import java.time.Instant;
-import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -24,26 +28,25 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class AdRepositoryTest {
 
     private final AdRepository adRepository;
+    private final DatabaseClient databaseClient;
 
-    private final Ad ad1 = Ad.builder()
-            .platform(Platform.OLX)
-            .url("dummy url")
-            .title("Dummy title")
-            .pushupTime(Instant.now().minus(1, ChronoUnit.DAYS))
-            .instant(Instant.now())
-            .hash(123)
-            .build();
-    private final Ad ad2 = Ad.builder()
-            .platform(Platform.OLX)
-            .url("dummy url2")
-            .title("Dummy title2")
-            .instant(Instant.now())
-            .hash(123)
-            .build();
+    @SneakyThrows
+    @BeforeEach
+    void insertData() {
+        final var insertScript = new ClassPathResource("insert-data.sql")
+                .getContentAsString(Charset.defaultCharset());
+        databaseClient.sql(insertScript)
+                .then()
+                .block();
+    }
 
+    @SneakyThrows
     @AfterEach
     void deleteAllData() {
-        adRepository.deleteAll()
+        final var deleteScript = new ClassPathResource("delete-data.sql")
+                .getContentAsString(Charset.defaultCharset());
+        databaseClient.sql(deleteScript)
+                .then()
                 .block();
     }
 
@@ -54,36 +57,45 @@ public class AdRepositoryTest {
     }
 
     @Test
-    void executesInsertAndFindAll() {
-        insert(ad1, ad2);
-
-        adRepository.findAll()
+    void findAllByFilterId() {
+        final Long filterId = 1L;
+        adRepository.findAllByFilterId(filterId)
                 .as(StepVerifier::create)
-                .expectNext(ad1)
-                .expectNext(ad2)
+                .expectNextCount(9L)
                 .verifyComplete();
     }
 
     @Test
-    void executeInsertFindByUrl() {
-        insert(ad1, ad2);
-
-        adRepository.findByUrl(ad1.getUrl())
+    void emptyFindAllByFilterId() {
+        final Long filterId = 99L;
+        adRepository.findAllByFilterId(filterId)
                 .as(StepVerifier::create)
-                .expectNext(ad1)
-                .verifyComplete();
-
-        adRepository.findAll()
-                .as(StepVerifier::create)
-                .expectNext(ad1)
-                .expectNext(ad2)
+                .expectNextCount(0L)
                 .verifyComplete();
     }
 
-    private void insert(Ad... ads) {
-        adRepository.saveAll(Arrays.asList(ads))
+    @Test
+    void findAllByFilterIds() {
+        final var filterIds = List.of(1L, 2L);
+        adRepository.findAllByFilterIds(filterIds)
                 .as(StepVerifier::create)
-                .expectNextCount(2L)
+                .expectNextCount(16L)
+                .verifyComplete();
+    }
+
+    @Test
+    void executeInsertAndFindByUrl() {
+        final var ad = Ad.builder()
+                .platform(Platform.OLX)
+                .url("uniqueUrl")
+                .title("title")
+                .instant(Instant.now())
+                .hash(123)
+                .build();
+        adRepository.save(ad).block();
+        adRepository.findByUrl(ad.getUrl())
+                .as(StepVerifier::create)
+                .expectNext(ad)
                 .verifyComplete();
     }
 }
